# SparseBTF

./: CMakeLists.txt  ComputeMeanStd.m  LICENSE  Mat2bin.m  README.md  mat2bin.m
cssUtil/: FisherNB.h  HuffmanDict.inl  ImgQlty.h  ImgQlty.inl  LATools.h  Patchifier.h  Patchifier.inl  ProbTools.h  ProgressReporter.cpp  cssUtil.vcxproj  cssUtil.vcxproj.filters  defs.h
data/Coeff_files/: Coeffs_BTF_carpet07_1e-05_U.mat  Coeffs_BTF_carpet07_1e-05_V.mat  Coeffs_BTF_felt05_1e-05_U.mat  Coeffs_BTF_felt05_1e-05_V.mat
data/dictionaries/: DictEnsOrth4DU.mat  DictEnsOrth4DV.mat  DictEnsOrth4DY.mat
shader/: BTFLoader.cpp  BTFLoader.h  shaders.cu  structs.h
src/cssData/: Data.h  DataBTF4D.h  DataBTF4D.inl  cssData.vcxproj  cssData.vcxproj.filters
src/cssDict/: CoeffCompression.h  CoeffCompression.inl  DictTest.h  DictTestEnsOrthnD.h  DictTestEnsOrthnD.inl  Dictionary.cpp  Dictionary.h  cssDict.vcxproj  cssDict.vcxproj.filters
src/cssMain/: btf4Dcomp.cpp  btf4Drecon.cpp  cssMain.sln  cssMain.vcxproj  cssMain.vcxproj.filters  temptest.cpp
src/cssRecon/: Recon.h  ReconEnsOrthnD.h  ReconEnsOrthnD.inl  ReconHelpers.h  ReconHelpers.inl  cssRecon.vcxproj  cssRecon.vcxproj.filters
src/cssUtil/: FisherNB.inl  HuffmanDict.h  IndexedSort.h  LATools.inl  ProbTools.inl  ProgressReporter.h  Random.cpp  Random.h  VclMatlab.cpp  VclMatlab.h  dataTypes.h  error.cpp  error.h
